compiler/toc_hir_lowering/tests/snapshots/lowering__lower_char_seq_escapes-51.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := \"\\u3ffffff\""

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..16): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..16): []
        Assign@(FileId(1), 0..16): None
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..16): String("�")
error in file FileId(1) at 6..15: invalid string literal: unicode codepoint value is greater than U+10FFFF

