compiler/toc_hir_lowering/tests/snapshots/lowering__lower_char_seq_escapes-56.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := \"\\udab0\""

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..13): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..13): []
        Assign@(FileId(1), 0..13)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..13): String("�")
error in file FileId(1) at 5..13: invalid string literal
| error in file FileId(1) for 6..12: surrogate chars are not allowed in char sequences

